# example-subxt

./: Cargo.toml  README.md
codegen/: banancle.rs
metadata/: metadata.scale
src/: example.rs  main.rs
