[package]
name = "example-subxt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = {version = "0.15.0", git = "https://github.com/paritytech/subxt.git", branch = "master"}
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
assert_matches = "1.5.0"
env_logger = "0.8.3"
tempdir = "0.3.7"
wabt = "0.10.0"
which = "4.0.2"
hex = "0.4.3"